// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests Modal BackgroundScroll 1`] = `
.c2 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c2:disabled,
.c2[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c3 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c3:disabled,
.c3[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c3:not(:disabled):not([aria-disabled]):focus,
.c3[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c3[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c3:not(:disabled):not([aria-disabled]):focus-visible,
.c3[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3:not(:disabled):not([aria-disabled]):hover,
.c3[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c3:not(:disabled):not([aria-disabled]):active,
.c3[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c4 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  color: var(--charcoal-text2);
}

.c0 {
  display: grid;
  gap: 24px;
}

.c1 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c1::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c1::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <div
      style={
        Object {
          "height": 1024,
        }
      }
    >
      <button
        className="charcoal-button"
        onClick={[Function]}
      >
        Open Modal
      </button>
    </div>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={false}
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={false}
        >
          <div
            className="charcoal-modal-header-title"
          >
            Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            className="c0"
          >
            <div
              className="charcoal-modal-align c1"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                aria-disabled={false}
                className="charcoal-text-field-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="charcoal-text-field-container"
                  data-invalid={false}
                >
                  <input
                    aria-labelledby="test-id"
                    className="charcoal-text-field-input"
                    data-invalid={false}
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                aria-disabled={false}
                className="charcoal-text-field-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="charcoal-text-field-container"
                  data-invalid={false}
                >
                  <input
                    aria-labelledby="test-id"
                    autoFocus={true}
                    className="charcoal-text-field-input"
                    data-invalid={false}
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                className="c2"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                  >
                    Fruits
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  style={
                    Object {
                      "border": 0,
                      "clip": "rect(0 0 0 0)",
                      "clipPath": "inset(50%)",
                      "height": "1px",
                      "margin": "-1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "absolute",
                      "whiteSpace": "nowrap",
                      "width": "1px",
                    }
                  }
                >
                  <select
                    onChange={[Function]}
                    tabIndex={-1}
                    value="10"
                  >
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="20"
                    >
                      20
                    </option>
                    <option
                      value="30"
                    >
                      30
                    </option>
                  </select>
                </div>
                <button
                  className="c3"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="c4"
                  >
                    Apple
                  </span>
                  <pixiv-icon
                    class="c5"
                    name="16/Menu"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          className="charcoal-icon-button charcoal-modal-close-button"
          data-active={false}
          data-size="S"
          data-variant="Default"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal BottomSheet 1`] = `
.c0 {
  display: grid;
  gap: 24px;
}

.c1 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c1::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c1::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={true}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "overflow": "hidden",
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={true}
        onKeyDown={[Function]}
        role="dialog"
        style={
          Object {
            "transform": " translateY(100%)",
          }
        }
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={true}
        >
          <div
            className="charcoal-modal-header-title"
          >
            Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            className="c0"
          >
            <div
              className="charcoal-modal-align c1"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Danger"
              onClick={[Function]}
            >
              削除する
            </button>
          </div>
        </div>
        <button
          className="charcoal-icon-button charcoal-modal-close-button"
          data-active={false}
          data-size="S"
          data-variant="Default"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal Default 1`] = `
.c2 {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 4px;
  width: 100%;
}

.c2:disabled,
.c2[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c3 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c3:disabled,
.c3[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c3:not(:disabled):not([aria-disabled]):focus,
.c3[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c3[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c3:not(:disabled):not([aria-disabled]):focus-visible,
.c3[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3:not(:disabled):not([aria-disabled]):hover,
.c3[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c3:not(:disabled):not([aria-disabled]):active,
.c3[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c4 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5 {
  color: var(--charcoal-text2);
}

.c0 {
  display: grid;
  gap: 24px;
}

.c1 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c1::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c1::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={false}
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={false}
        >
          <div
            className="charcoal-modal-header-title"
          >
            Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            className="c0"
          >
            <div
              className="charcoal-modal-align c1"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                aria-disabled={false}
                className="charcoal-text-field-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="charcoal-text-field-container"
                  data-invalid={false}
                >
                  <input
                    aria-labelledby="test-id"
                    className="charcoal-text-field-input"
                    data-invalid={false}
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                aria-disabled={false}
                className="charcoal-text-field-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="charcoal-text-field-container"
                  data-invalid={false}
                >
                  <input
                    aria-labelledby="test-id"
                    autoFocus={true}
                    className="charcoal-text-field-input"
                    data-invalid={false}
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                className="c2"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                  >
                    Fruits
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  style={
                    Object {
                      "border": 0,
                      "clip": "rect(0 0 0 0)",
                      "clipPath": "inset(50%)",
                      "height": "1px",
                      "margin": "-1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "absolute",
                      "whiteSpace": "nowrap",
                      "width": "1px",
                    }
                  }
                >
                  <select
                    onChange={[Function]}
                    tabIndex={-1}
                    value="10"
                  >
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="20"
                    >
                      20
                    </option>
                    <option
                      value="30"
                    >
                      30
                    </option>
                  </select>
                </div>
                <button
                  className="c3"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="c4"
                  >
                    Apple
                  </span>
                  <pixiv-icon
                    class="c5"
                    name="16/Menu"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          className="charcoal-icon-button charcoal-modal-close-button"
          data-active={false}
          data-size="S"
          data-variant="Default"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal FullBottomSheet 1`] = `
.c0 {
  display: grid;
  gap: 24px;
}

.c1 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c1::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c1::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet="full"
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "overflow": "hidden",
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet="full"
        onKeyDown={[Function]}
        role="dialog"
        style={
          Object {
            "transform": " translateY(100%)",
          }
        }
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet="full"
        >
          <div
            className="charcoal-modal-header-title"
          >
            Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            className="c0"
          >
            <div
              className="charcoal-modal-align c1"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                aria-disabled={false}
                className="charcoal-text-field-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="charcoal-text-field-container"
                  data-invalid={false}
                >
                  <input
                    aria-labelledby="test-id"
                    className="charcoal-text-field-input"
                    data-invalid={false}
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              className="charcoal-modal-align"
            >
              <div
                aria-disabled={false}
                className="charcoal-text-field-root"
              >
                <div
                  className="charcoal-field-label-root"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="charcoal-text-field-container"
                  data-invalid={false}
                >
                  <input
                    aria-labelledby="test-id"
                    className="charcoal-text-field-input"
                    data-invalid={false}
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    type="text"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          className="charcoal-icon-button charcoal-modal-close-button"
          data-active={false}
          data-size="S"
          data-variant="Default"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal InternalScroll 1`] = `
.c0 {
  overflow: auto;
  max-height: calc( 100vh - 184px - 56px );
}

.c1 {
  position: relative;
}

.c1::before {
  content: '';
  pointer-events: none;
  border-top: 1px solid rgba(0,0,0,0.08);
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={false}
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={false}
        >
          <div
            className="charcoal-modal-header-title"
          >
            Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            className="c0"
          >
            <div
              style={
                Object {
                  "background": "linear-gradient(#e66465, #9198e5)",
                  "height": 1000,
                }
              }
            />
          </div>
          <div
            className="charcoal-modal-buttons c1"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal NotDismmissableStory 1`] = `
.c0 {
  display: grid;
  gap: 24px;
}

.c1 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c1::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c1::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet={false}
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet={false}
        onKeyDown={[Function]}
        role="dialog"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet={false}
        >
          <div
            className="charcoal-modal-header-title"
          >
            Title
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            className="c0"
          >
            <div
              className="charcoal-modal-align c1"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
          </div>
          <div
            className="charcoal-modal-buttons"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
